--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 PA3: netplan
 
-Due: Tuesday May 12, 2015 @ 10:00 AM
+Checkpoint Due: Tuesday May 5, 2015 @10:00PM
+Final submission Due: Tuesday May 12, 2015 @ 10:00 PM
 
 NOTE: You are free to use this starter code/Makefile as a basis for your
 assignment, but using it is not a requirement. Feel free to throw out the
